# alfred-slack

./: .gitignore  alfred_slack.py  pyproject.toml
